--- a/cafe/index.html
+++ b/cafe/index.html
@@ -255,7 +255,7 @@
 										<i class="fa-regular fa-heart"></i>
 									</button>
 								</div>
-								<img src="/img/product img/product-img-2.png" alt="" class="popular__img">
+								<img src="img/product img/product-img-2.png" alt="" class="popular__img">
 							</div>
 							<div class="popular__text-block">
 
